--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -18,8 +26,17 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^9.2.0",
     "mongoose": "^5.12.11",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.4"
+    "node": "^20.13.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
+    "ts-node-dev": "^1.1.6"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "typescript": "^5.4.5"
   }
 }
