--- a/infra1/k8s/ingress-srv.yaml
+++ b/infra1/k8s/ingress-srv.yaml
@@ -17,10 +17,7 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000 
-          - path: /?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: client-srv
-                port:
-                  number: 3000           
+          # - path: /?(.*)
+          #   backend:
+          #     serviceName: client-srv
+          #     servicePort: 3000           
