--- a/skaffold1.yaml
+++ b/skaffold1.yaml
@@ -14,13 +14,5 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
-            dest: .
-    - image: bheshraj13/ticketing-client
-      context: client
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: '**/*.js'
+          - src: "src/**/*.ts"
             dest: .
