--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -17,10 +17,13 @@ spec:
                 name: auth-srv
                 port:
                   number: 3000 
-          - path: /api/tickets/?(.*) 
+          - path: /api/tickets/?(.*)
+            pathType: Prefix 
             backend:
-              serviceName: tickets-srv
-              servicePort: 3000       
+              service:
+                name: tickets-srv
+                port:
+                  number: 3000       
           - path: /?(.*)
             pathType: Prefix
             backend:
