--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tickets",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,20 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@bheshraj-ticketing/common": "^1.0.13",
-    "@types/cookie-session": "^2.0.42",
-    "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.1",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.11.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb-memory-server": "^9.2.0",
-    "mongoose": "^5.12.11",
-    "mongoose-update-if-current": "^1.4.0",
+    "@types/bull": "^4.10.0",
+    "bull": "^4.15.1",
     "node": "^20.13.1",
     "node-nats-streaming": "^0.3.2",
-    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^1.1.6"
   },
