--- a/orders/package.json
+++ b/orders/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bheshraj-ticketing/common": "^1.0.11",
+    "@bheshraj-ticketing/common": "^1.0.12",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.2.0",
     "mongoose": "^5.12.11",
+    "mongoose-update-if-current": "^1.4.0",
     "node": "^20.13.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
